# lootbox-all-in-one

./: Dockerfile  README.md  init.sh
chaivdf/src/: vdf_base.hpp
chaivdf/src/aggvdf/: aggutil.h  aggvdf.h
chiavdf/src/: prover_slow.h  vdf_new.h
chiavdf/src/python_bindings/: fastvdf.cpp
headstart_py/: priv.key  pub.key  requirements.txt
loot-box-protocol/: KZG10.py  LootBoxOpening.py  MappingFunction.py  PRB.py  ProbabilityVerification.py  common.py  interactive_server.py  requirements.txt
loot-box-protocol/BulletinBoard/: commitment.txt  evaluation_proofs.txt
loot-box-protocol/functional-commitment/functional_commitment/: Cargo.toml
loot-box-protocol/functional-commitment/functional_commitment/src/: commit_function.rs  make_proof.rs  verify.rs
loot-box-protocol/results/: fc_samples.csv  plot.py  poly_deg.csv  poly_sample.csv
